<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3903928830427305/7197181868</string>
    <string name="app_id">ca-app-pub-3903928830427305~6842437575</string>
    <string name="server_client_id">1002692881623-j2co8bnp3h8pae3kjbcg1ho5v9eupgbe.apps.googleusercontent.com</string>
    <!-- 1002692881623-qb16dcr4dm7q7mc122oe2iqnv2or80os.apps.googleusercontent.com
    1002692881623-j2co8bnp3h8pae3kjbcg1ho5v9eupgbe.apps.googleusercontent.com
    _JiU3-ImXG3tfA0P18K1CnQw -->
    <string name="app_name">麥奇兜</string>
    <string name="version_name"> 運行版本 : </string>
    <string name="empty"> 空 </string>
    <string name="title_user_zh">我的帳號</string>
    <string name="title_setting_zh">設定</string>
    <string name="title_add_zh">新增</string>
    <string name="title_dashboard_zh">私房手冊</string>
    <string name="title_opentripplanFrag_zh">  公開景點  </string>
    <string name="title_opentripplan_zh">Ｈ Ｏ Ｔ</string>
    <string name="title_notifications_zh">訊息</string>
    <string name="title_add_pp_zh">推薦你的私房</string>
    <string name="pp_save_zh">新增至手冊</string>
    <string name="pp_new_success_get_exp_zh">新增景點至雲端完成，取得經驗值 100 點</string>
    <string name="pp_name_zh">請輸入 景點/店家 名稱</string>
    <string name="pp_name_tag_zh"> 景點/店家 名稱 :</string>
    <string name="pp_phone_zh">請輸入 景點/店家 聯絡電話</string>
    <string name="pp_phone_tag_zh"> 聯絡電話 :</string>
    <string name="pp_country_zh">請選擇國家</string>
    <string name="pp_city_zh">請選擇地區</string>
    <string name="pp_addr_zh">景點/店家的地址</string>
    <string name="pp_addr_tag_zh"> 地址/座標 :</string>
    <string name="pp_fb_zh">粉絲團/社團</string>
    <string name="pp_fb_tag_zh"> Facebook 粉絲團/社團 :</string>
    <string name="pp_web_zh">官方網站</string>
    <string name="pp_web_tag_zh"> 官方網站 :</string>
    <string name="pp_bloginfo_zh">部落客推薦</string>
    <string name="pp_bloginfo_tag_zh"> 部落客推薦 :</string>
    <string name="pp_opentime_zh">營業時間</string>
    <string name="pp_opentime_tag_zh"> 營業時間 :</string>
    <string name="pp_descrip_zh">詳細描述</string>
    <string name="pp_descrip_tag_zh"> 詳細描述 :</string>
    <string name="pp_tagnote_zh">標籤</string>
    <string name="pp_tagnote_tag_zh"> 標籤 :</string>
    <string name="pp_swipe_b1_zh">刪除</string>
    <string name="pp_swipe_b2_zh">編輯</string>
    <string name="pp_status_zh">雲端狀態</string>
    <string name="pp_status_true_zh">雲端狀態 ON</string>
    <string name="pp_status_false_zh">雲端狀態 OFF</string>
    <string name="pp_filter_fun_desp_zh"> ▼ 使用快速篩選</string>
    <string name="pp_filter_backfun_desp_zh"> ▲ 回到私房手冊</string>
    <string name="pp_filter_fun_switch_online_zh">下載線上資料</string>
    <string name="user_email_hint_zh">使用 電子郵件/Email 登入</string>
    <string name="filter_textview1_zh"> 全部標籤 : </string>
    <string name="filter_textview2_zh">主要分類 : </string>
    <string name="filter_textview3_zh">類型 : </string>
    <string name="user_login_title_zh">登入：</string>
    <string name="downloadpps_off_zh">雲端景點同步 - 【關閉】</string>
    <string name="downloadpps_on_zh">雲端景點同步 - 【開啟】</string>
    <string name="user_forget_password_zh">忘記密碼</string>
    <string name="user_login_zh">登入</string>
    <string name="user_logout_zh">登出</string>
    <string name="user_register_title_zh">註冊 : </string>
    <string name="user_register_zh">註冊</string>
    <string name="user_name_title_zh">暱稱 | 名稱 :</string>
    <string name="user_name_zh">暱稱 | 名稱</string>
    <string name="user_email_title_zh">Email | 帳號 : </string>
    <string name="user_email_zh">Email/帳號</string>
    <string name="user_phone_title_zh">手機 :</string>
    <string name="user_phone_zh">手機</string>
    <string name="user_password_title_zh">密碼 :</string>
    <string name="user_password_zh">密碼</string>
    <string name="user_password2_zh">再一次輸入密碼</string>
    <string name="hello_username_title_zh">Welcome Back!</string>
    <string name="hello_change_btn_zh">更改</string>
    <string name="hello_changeOK_btn_zh">確定</string>
    <string name="hello_userphone_ins_btn_zh">輸入電話</string>
    <string name="hello_userpass_title_zh">密碼</string>
    <string name="hello_userpass_btn_zh">更改密碼</string>
    <string name="dash_tripList_null_zh">請先建立清單</string>
    <string name="dash_tripList_sel_zh">請選擇清單</string>
    <string name="dash_save_select_zh">請選擇存入位置</string>
    <string name="dash_save_mode1">存入本地私房手冊中</string>
    <string name="dash_save_mode2">存入清單中</string>
    <string name="dash_tracker_zh">跳轉所在位置</string>
    <string name="dash_tripsched_zh">行程規劃</string>
    <string name="notif_currPlace_zh">您所在的位置：</string>
    <string name="notif_locating_zh">取得定位中…</string>
    <string name="notif_currLocPP_zh">靠近您的地點 - </string>
    <string name="notif_youhavego_zh">您到過的地方:</string>
    <string name="notif_pp_distance_zh">距離 :</string>
    <string name="notif_here_notif_zh"> H E R E </string>
    <string name="trip_groupListTitle_zh">  成員  </string>
    <string name="trip_groupList_add_zh">邀請E-Mail</string>
    <string name="trip_groupList_add_input_zh">輸入 E-Mail</string>
    <string name="trip_zero_alert_zh">請先建立清單</string>
    <string name="trip_titleName_zh">建立清單名稱</string>
    <string name="trip_planName_zh"> 計劃名稱 </string>
    <string name="trip_title_duplicate_zh">計劃名稱重複，請重新輸入</string>
    <string name="trip_title_cloud_duplicate_zh">與雲端中的計劃名稱重複，請重新輸入</string>
    <string name="trip_title_cancel_zh">取消</string>
    <string name="trip_title_save_zh">建立</string>
    <string name="tripPlan_prepare_zh">開始計劃旅程吧</string>
    <string name="tripPlan_moveTo_zh">移動至..</string>
    <string name="tripPlan_undefList_zh">未規劃景點</string>
    <string name="tripPlan_sort_zh">計算、排序距離(近->遠)</string>
    <string name="tripPlan_cloudInsertOK_zh">同步至雲端完成</string>
    <string name="tripPlan_delCloud_zh">刪除雲端上的行程計畫?</string>
    <string name="tripPlan_delCloudOK_zh">刪除雲端上的行程計畫-完成</string>
    <string name="dashlist_imagehead_zh">線上狀態</string>
    <string name="comments_more_zh">更多評論</string>
    <string name="comment_update_zh">更新</string>
    <string name="add_comment_zh">新增評論</string>
    <string name="cmts_backBtn_desp_zh">回上一層</string>
    <string name="cmts_contentInput_zh">輸入評論</string>
    <string name="cmts_CountText_zh">已有評論 : </string>
    <string name="cmt_add_OK_get_exp_zh">評論成功，取得 50 點經驗值</string>
    <string name="cmt_add_success_zh">評論新增成功</string>
    <string name="cmt_add_failure_zh">評論新增失敗</string>
    <string name="cmt_update_success_zh">評論更新成功</string>
    <string name="cmt_update_failure_zh">評論更新失敗，稍後再試</string>
    <string name="reset_password_success_zh">更新密碼成功！請重新登入</string>
    <string name="reset_password_null_fail_zh">請輸入正確資訊！</string>
    <string name="reset_password_diff_fail_zh">重覆輸入的密碼不同！</string>
    <string name="reset_password_fail_zh">更新密碼失敗！請重試</string>
    <string name="reset_password_old_zh">原本的密碼</string>
    <string name="reset_password1_zh">輸入新密碼密碼</string>
    <string name="reset_password2_zh">再輸入一次新密碼</string>
    <string name="reset_phone_OK_zh">更新電話成功</string>
    <string name="reset_phone_FAIL_zh">更新電話失敗</string>
    <string name="reset_name_OK_zh">更新名稱成功</string>
    <string name="reset_name_FAIL_zh">更新名稱失敗</string>
    <string name="forget_password_title_zh">忘記密碼</string>
    <string name="forget_password_hint_zh">請輸入E-Mail</string>
    <string name="forget_password_success_zh">請至信箱收取新密碼</string>
    <string name="forget_password_fail_zh">忘記密碼功能失敗，請確認E-Mail是否正確？</string>
    <string name="forget_password_null_fail_zh">請輸入正確E-Mail</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_trace_new_pp_zh"> 新增到訪紀錄，取得經驗值 10 點</string>
    <string name="un_login_alert_message_zh">請先登入</string>
    <string name="un_login_tripplan_zh">註冊/登入後，就能擁有雲端服務唷！</string>
    <string name="un_login_tripplan_cloudservice_zh">請先登入，才享有雲端服務唷！</string>
    <string name="network_not_stable_zh">網路不穩定，請稍後再試</string>
    <string name="un_login_requirment_zh">登入帳號後，可以「免費」開啟更多功能唷！</string>
    <string name="user_level_default">Lv 1</string>
    <string name="user_level">Lv </string>
    <string name="user_exp_default"> 0   /   100</string>
    <string name="user_exp_splite"> / </string>
</resources>
