<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:hint="@string/reset_password_old_zh"
            android:inputType="textPassword"/>
    <EditText
            android:id="@+id/reset_password_r1"
            android:hint="@string/reset_password1_zh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    <EditText
            android:id="@+id/reset_password_r2"
            android:hint="@string/reset_password2_zh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>
</LinearLayout>
