<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/setting_layout"
                                             tools:context="tw.breadcrumbs.makeda.Setting_Fragment">
    <LinearLayout android:id="@+id/user_setting_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="@+id/setting_layout"
                  app:layout_constraintStart_toStartOf="@+id/setting_layout"
                  app:layout_constraintEnd_toEndOf="@+id/setting_layout"
                  app:layout_constraintBottom_toTopOf="@+id/setting_scroll"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:orientation="vertical">
        <TextView
                android:id="@+id/verName"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity = "end"
                android:layout_gravity="center"
                android:text="@string/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
            android:id="@+id/setting_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/user_setting_layout"
            app:layout_constraintStart_toStartOf="@+id/setting_layout"
            app:layout_constraintEnd_toEndOf="@+id/setting_layout"
            app:layout_constraintBottom_toBottomOf="@+id/setting_layout"
            >

        <LinearLayout android:id="@+id/user_login_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/user_setting_layout"
                      app:layout_constraintStart_toStartOf="@+id/setting_layout"
                      app:layout_constraintEnd_toEndOf="@+id/setting_layout"
                      app:layout_constraintBottom_toBottomOf="@+id/setting_layout"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"
                      android:orientation="vertical">
            <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            <TextView
                    android:id="@+id/userLogin_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:text="@string/user_login_title_zh"/>
            <EditText
                    android:id="@+id/user_email"
                    android:hint="@string/user_email_hint_zh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"/>
            <EditText
                    android:id="@+id/user_password"
                    android:hint="@string/user_password_zh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>
            <LinearLayout android:id="@+id/user_login_btn_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:gravity="center_horizontal"
                      android:orientation="horizontal">
                <Button
                        android:id="@+id/user_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_login_zh"
                        android:background="@color/colorBackground"
                        android:layout_gravity="center"/>
                <Button
                        android:id="@+id/user_forget_pass"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_forget_password_zh"
                        android:background="@color/colorBackground"
                        android:layout_gravity="center"/>
            </LinearLayout>


            <TextView
                android:id="@+id/userRegister_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:text="@string/user_register_title_zh"/>
            <TextView
                    android:id="@+id/userName_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:text="@string/user_name_title_zh"/>
            <EditText
                    android:id="@+id/user_name_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="text"/>
            <TextView
                    android:id="@+id/userEmail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:text="@string/user_email_title_zh"/>
            <EditText
                    android:id="@+id/user_email_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"/>
            <TextView
                    android:id="@+id/userPhone_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:text="@string/user_phone_title_zh"/>
            <EditText
                    android:id="@+id/user_phone_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="phone"/>
            <TextView
                    android:id="@+id/userPassword_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:text="@string/user_password_title_zh"/>
            <EditText
                    android:id="@+id/user_password_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>
            <EditText
                    android:id="@+id/user_password2_r"
                    android:hint="@string/user_password2_zh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>

            <Button
                    android:id="@+id/user_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_register_zh"
                    android:background="@color/colorBackground"
                    android:layout_gravity="center"/>
            <Button
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:gravity = "end"
                    android:background="@color/colorBackground"
                    android:text="@string/privacy_policy"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
