<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="tw.breadcrumbs.makeda.Add_Fragment"
             android:id="@+id/add_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_cons_layout"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                android:id="@+id/pp_add"
                app:layout_constraintTop_toTopOf="@id/add_cons_layout"
                app:layout_constraintStart_toStartOf="@+id/add_cons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/title_add_pp_zh"/>
        <ImageButton
                android:id="@+id/pp_saveButton"
                app:layout_constraintTop_toBottomOf="@+id/pp_add"
                app:layout_constraintBottom_toTopOf="@+id/add_spin_layer"
                app:layout_constraintEnd_toEndOf="@+id/add_cons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pp_save_zh"
                android:src="@android:drawable/ic_menu_save"
                android:gravity="end"
                android:background="#00FFFFFF"/>
        <LinearLayout
                android:id="@+id/add_spin_layer"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@+id/add_cons_layout"
                app:layout_constraintTop_toBottomOf="@+id/pp_saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">
                    <Spinner
                            android:id="@+id/pp_country_in"
                            android:spinnerMode="dialog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"/>
                    <Spinner
                            android:id="@+id/pp_city_in"
                            android:spinnerMode="dialog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"/>
        </LinearLayout>
        <TextView
                android:id="@+id/pp_name_tag"
                app:layout_constraintTop_toBottomOf="@id/add_spin_layer"
                app:layout_constraintStart_toStartOf="@+id/add_cons_layout"
                app:layout_constraintEnd_toEndOf="@+id/add_cons_layout"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:text="@string/pp_name_tag_zh"/>
        <EditText
                android:id="@+id/pp_name_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@id/pp_name_tag"
                app:layout_constraintStart_toStartOf="@+id/add_cons_layout"
                app:layout_constraintEnd_toEndOf="@+id/add_cons_layout"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:singleLine="false"/>

        <ScrollView
                android:id="@+id/add_frag_scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@id/pp_name_in"
                app:layout_constraintStart_toStartOf="@+id/add_cons_layout"
                app:layout_constraintEnd_toEndOf="@+id/add_cons_layout"
                app:layout_constraintBottom_toBottomOf="@+id/add_cons_layout"
                android:layout_below="@+id/pp_name_in">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:id="@+id/pp_phone_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_phone_tag_zh"/>
                <EditText
                        android:id="@+id/pp_phone_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="16sp"/>
                <TextView
                        android:id="@+id/pp_addr_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_addr_tag_zh"/>
                <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                    <EditText
                        android:id="@+id/pp_addr_in"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textPostalAddress"/>
                    <ImageButton
                            android:id="@+id/locateNowBtn"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/dash_tracker_zh"
                            android:src="@drawable/tracker_icon"
                            android:background="#00FFFFFF" />
                </LinearLayout>
                <TextView
                        android:id="@+id/pp_fb_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_fb_tag_zh"/>
                <EditText
                        android:id="@+id/pp_fb_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textWebEditText"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/pp_web_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_web_tag_zh"/>
                <EditText
                        android:id="@+id/pp_web_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textWebEditText"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/pp_bloginfo_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_bloginfo_tag_zh"/>
                <EditText
                        android:id="@+id/pp_bloginfo_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textWebEditText"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/pp_opentime_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_opentime_tag_zh"/>
                <EditText
                        android:id="@+id/pp_opentime_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textMultiLine"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/pp_tag_note_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_tagnote_tag_zh"/>
                <EditText
                        android:id="@+id/pp_tag_note_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textMultiLine"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/pp_descrip_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:text="@string/pp_descrip_tag_zh"/>
                <EditText
                        android:id="@+id/pp_descrip_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textMultiLine"
                        android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
